# dubna

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  TODO.md  arith.c  arithmetic.cpp  assembler.cpp  besm6_arch.cpp  besm6_arch.h  cosy.cpp  cosy.h  disk.cpp  disk.h  drum.cpp  drum.h  e50.cpp  e57.cpp  e64.cpp  el_master_api.h  el_svs_api.h  el_svs_internal.h  encoding.cpp  encoding.h  extracode.cpp  extracode.h  gost10859.h  machine.cpp  machine.h  main.cpp  memory.cpp  memory.h  meson.build  meson.options  over.pl  plotter.cpp  plotter.h  processor.c  processor.cpp  (+12 more)
.github/workflows/: c-cpp.yml
doc/: Besm6_Instruction_Set.md  Extracode_50.md  Extracode_57.md  Extracode_64.md  Extracode_72.md
examples/: README.md  algol.dub  aspid.dub  assem.dub  bemsh.dub  bozp-ybyb.dub  catalog.dub  ch54.dub  copy.dub  dipol.dub  disc.dub  dos.dub  dtran.dub  e-2.dub  edit.dub  exfor.dub  file.dub  flodia.dub  flower.dub  forex.dub  fortran.dub  freemem.dub  ftn.dub  gost-encoding.dub  grafor.dub  grayscale.dub  introspective.dub  intrsp.dub  iso-encoding.dub  juggle.dub  lib1.dub  lib2.dub  lib3.dub  libpunch.dub  library1.dub  library12.dub  library2.dub  library21.dub  library22.dub  library23.dub  (+35 more)
examples/b/: README.md  doors.dub  e-2.dub  fibonacci.dub  fizzbuzz.dub  hello.dub  isprime.dub  mandelbrot.dub
examples/games/: README.md  adventure1.dub  delmar.dub  guess.dub  hamurabi.dub  oregon.dub  quinio.dub  wumpus.dub
examples/games/adventure1/: adv1.pas  maze1.pas  mini1.pas  mini2.pas  mini3.pas
examples/games/adventure2/: adv2.pas  database.txt  m2.pas  main.pas  maze.pas  u1.pas  u2.pas
examples/games/adventure3/: cmds1.pas  cmds2.pas  cmds3.pas  locs.pas  mt1.pas  mtadv.txt  mtadvent.pas  probs.pas
examples/grafor/: README.md  calcomp.dub  cardioide.dub  charset.dub  curve.dub  demo.dub  flower.dub  grafor.dub  graphic.dub  hat.dub  hystogram.dub  roses.dub  sincos.dub  sphere.dub  surface.dub  symset.dub  tektronix.dub  watanabe.dub
examples/libraries/: README.md  lib1.dub  lib2.dub  lib26.dub  lib3.dub  library1.dub  library12.dub  library2.dub  library21.dub  library22.dub  library23.dub  library3.dub  library5.dub
examples/overlay/: README.md  hello-algol.dub  hello-assem.dub  hello-bemsh.dub  hello-forex.dub  hello-fortran.dub  hello-ftn.dub  hello-madlen.dub  hello-pascal.dub
examples/quine/: README.md  algol.dub  forex.dub  fortran.dub  ftn.dub  pascal.dub
examples/tapes/: README.md  monsys171.dub  monsys317.dub  monsys377.dub  monsys434.dub  tape12.dub  tape37.dub  tape9.dub
examples/tests/: README.md  bad_e64.dub  elem_func.dub  overflow.dub
subprojects/: .gitignore
tapes/: .gitignore  12  37  739  9  Makefile  README.md  README.txt  b.7  b7.c  bemsh.739  bemsh739.c  build-tapes.sh  lib1.txt  lib2.txt
tests/: CMakeLists.txt  README.md  alu_test.cpp  arch_test.cpp  besmcat.pascal  cernlib_test.cpp  cli_test.cpp  cosy_test.cpp  cpu_test.cpp  e64_test.cpp  elem_func_test.cpp  expect_algol.txt  expect_aspid.txt  expect_assem.txt  expect_b.txt  expect_b_full_list.txt  expect_bemsh.txt  expect_dtran.txt  expect_e50_print_real.txt  expect_e64_simple.txt  expect_edit.txt  expect_elem_func.txt  expect_epsilon.txt  expect_file_read.txt  expect_file_scratch.txt  expect_file_write.txt  expect_forex.txt  expect_fortran.txt  expect_ftn.txt  expect_fubar.txt  expect_grafor_calcomp.txt  expect_grafor_tektronix.txt  expect_grafor_watanabe.txt  expect_lib1.txt  expect_lib2.txt  expect_lib3.txt  expect_libpunch.txt  expect_library1.txt  expect_library12.txt  expect_library2.txt  (+38 more)
tests/lib1/: a200.dub  a200.f  a400.f  a401.f  a402.f  a403.f  a404.f  a500.f  b101.f  b102.f  b200.f  b400.f  c100.f  c101.f  c110.f  c201.f  c202.f  c203.f  c204.f  c205.f  c206a.f  c206b.f  c206c.f  c230.f  c231.f  c300.f  c301.f  c302.f  c302b.f  c303a.f  c303b.f  c304.f  c305.f  c306.f  c307.f  c308.f  c309.f  c310.f  c311.f  c312.f  (+338 more)
tests/lib2/: cleanup.sh  expect_f002a.txt  expect_f002b.txt  expect_f002c.txt  expect_f003a.txt  expect_f003b.txt  expect_f003c.txt  expect_f004a.txt  expect_f004b.txt  expect_f004c.txt  expect_f010a.txt  expect_f010b.txt  expect_f010c.txt  expect_f011a.txt  expect_f011b.txt  expect_f011c.txt  expect_f012a.txt  expect_f012b.txt  expect_f100.txt  expect_f101.txt  expect_f102.txt  expect_f103.txt  expect_f104.txt  expect_f105.txt  expect_f106a.txt  expect_f106b.txt  expect_f107.txt  expect_f108.txt  expect_f109.txt  expect_f110.txt  expect_f111.txt  expect_f112.txt  expect_f112a.txt  expect_f115.txt  expect_f116.txt  expect_f117.txt  expect_f118.txt  expect_f119.txt  expect_f120.txt  expect_f121.txt  (+442 more)
